# MRI

./: .gitignore  README.md  pyproject.toml
examples/: run_all.py  run_sequence_simulation.py
mri_sim/: __init__.py  bloch.py  phantom.py  plotting.py  reconstruction.py  sequence.py
sequences/: __init__.py  bssfp.py  fast_gre.py  gre.py  non_cartesian.py  rare.py  spin_echo.py
src/mri_lab/: __init__.py  bloch.py  kspace.py  phantom.py  reconstruction.py  sequences.py  visualization.py
tests/: test_bloch.py  test_core.py  test_reconstruction.py  test_sequences.py
