[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mri-pulse-sequence-lab"
version = "0.1.0"
description = "Lightweight MRI pulse sequence simulation and reconstruction experiments."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "matplotlib>=3.7"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
